--- a/frontend/public/ransky.html
+++ b/frontend/public/ransky.html
@@ -159,7 +159,7 @@
         <strong>Ransky</strong> is an <span style="color:#111;">AI Resume ranking tool</span> designed to streamline your recruitment process.<br>
         Seamlessly discover the best talent in your applicant pool, faster and smarter. Instantly upload CVs, enter job details, and see ranked candidates at a glance—no manual review needed.
       </p>
-      <a href="https://ransky.ai/register" class="register-btn">Register Now</a>
+      <a href="https://ransky-frontend.onrender.com/signup" class="register-btn">Register Now</a>
     </section>
   </main>
   <footer>
